CSS/style.css
#container
{
    box-sizing: border-box;
    text-align: center;
    background-image: url("../images/movie2.jpeg") !important;
    background-size: cover;
    padding: 200px;
    color: white;
    margin:0%;
    background-repeat: no-repeat;
    background-attachment: fixed;
    


}

#welcomeTitle{
    font-size:40px
}

#questionsContainer{
    display: block;
    text-align: center;
    background-image: url("../images/moviebackground.jpg") !important;
    padding:10%;
    color: white;


}

.ansbtn{
    color: white;
    background-color: rgb(15, 132, 132);
    padding: 2%;
    margin: 3px;
}

#question{
    font-size: 30px;;
}

.header{
    margin-bottom: 20px;
}

#results{
    text-align: center;
}

#reset{

    margin-bottom: 1%;
    margin-top: 5%;
    text-align: center;
}

